# llm_cheating_sentiment

./: .gitignore  LICENSE  README.md  config.py  defined_types.py  example.ipynb  firebase.py  main.py  pyproject.toml  run.sh  steam_product.py
extraction_service/: Dockerfile  README.md  compose.yml  config.py  defined_types.py  firebase.py  log.py  main.py  mocks.py  pyproject.toml  steam_product.py
extraction_service/.devcontainer/: devcontainer.json
extraction_service/llm/: client.py  local_llama.py  openrouter.py  test_client.py
frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml
frontend/src/lib/: OverTime.svelte  Snapshot.svelte  Table.svelte  firebase_client.ts  firebase_server.ts
frontend/src/lib/plot/: Bar.svelte  Label.svelte  Line.svelte
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  layout.css
llm/: client.py  local_llama.py  openrouter.py
