[project]
name = "cheating-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
]
